# glossAPI

./: .gitattributes  .gitignore  404.html  CONTRIBUTING.md  DOWNLOADER_CONTRIBUTION.md  LICENSE  Newsletter2024_formatted.html  PR_MESSAGE.md  README.md  README_EN.md  README_ES.md  README_FR.md  README_PT.md  README_RU.md  README_ZH.md  build.gradle  format_newsletter.py  index.html  install_glossapi.py  keimena.html  llms.bib  mkdocs.yml  omada.html  pyproject.toml  refactoring_plan.md  requirements.txt  run_test.py  sample_and_convert.py  settings.json  setup.py  test_corpus.py  test_model_loading.py  test_script.py  test_urls.parquet  text_mining.bib  text_sources.csv  twok_by_area.csv  wikipedia_sources.csv
.env/: pyvenv.cfg
Greek_variety_classification/: Ancient_greek_or_not.ipynb  Greek_variety_classifier.ipynb  ancient_greek_filter_dataset.csv  greek_classification_dataset.csv
api_corpus_tmp/: index.html
architecture/: index.html
aws_job_distribution/: index.html
cleaning_scripts/: analyze_band_verdicts.py  analyze_broken_text_verdicts.py  analyze_charset_filter_impact.py  analyze_cleaning_concentration.py  analyze_cleaning_distributions.py  analyze_line_vs_span_verdicts.py  analyze_quality_vs_deletions.py  bench_phase_a_workers.py  calibrate_counter_thresholds.py  classify_cmark_failures.py  clean_and_stats_full.py  clean_and_stats_rowsharded.py  clean_corpus_parquets.py  clean_corpus_to_text_shards.py  clean_with_three_counter_thresholds.py  compare_pilots_via_cmark_gfm.py  compute_drop_decisions.py  compute_phase_a_stats_per_doc.py  extract_ps_glyph_line_matches.py  extract_reflow_segments.py  gemini_broken_text_reviewer.py  gemini_three_counter_reviewer.py  inspect_bpe_vocab_denoising.py  orchestrate_all_4_tokenizers.sh  organize_verdicts_for_inspection.py  pull_150_new_challenging.py  pull_deletion_band_samples.py  pull_top_phase_a_altered.py  pull_top_three_counters_pdf.py  regenerate_samples.py  run_matcher_parallel.py  sample_and_review_line_vs_span.py  sample_broken_text_candidates.py  sample_char_strip_bands.py  sample_charset_threshold_bands.py  sample_match_index.py  show_phase_a_demos.py  stratified_three_counter_sampler.py  train_bpe_from_text_shards.py  train_bpe_on_cleaned_corpus.py  (+4 more)
code_map/: index.html
configuration/: index.html
data/: Data_PostBERT.tsv  Neo annotation dataset.ods  draw2texts_Validation2.csv  draw2texts_predicted.csv  glc.rda  gutenberg.rda  result_sentences.pkl
deepseek-ocr/: NOTES.md  README.md  run_pdf_ocr_vllm.py
dependency_setup/: deepseek_gpu_smoke.py  dependency_notes.md  requirements-glossapi-deepseek.txt  requirements-glossapi-docling.txt  requirements-glossapi-rapidocr.txt  requirements-glossapi-vanilla.txt  setup_deepseek_uv.sh  setup_glossapi.sh  setup_glossapi_deepseek.sh
dependency_setup/deepseek_uv/: pyproject.toml
docs/: api_corpus_tmp.md  aws_job_distribution.md  code_map.md  configuration.md  getting_started.md  index.md  lightweight_corpus.md  math_enrichment_runtime.md  multi_gpu.md  ocr_and_math_enhancement.md  ocr_noise_failure_modes.md  ocr_repetition_policy.md  pipeline.md  quickstart.md  troubleshooting.md
getting_started/: index.html
glossAPI/: pyvenv.cfg
glossapi/: __init__.py
greek-text-sources/: text_sources.csv  wikipedia_sources.csv
lightweight_corpus/: index.html
math_enrichment_runtime/: index.html
multi_gpu/: index.html
ocr_and_math_enhancement/: index.html
ocr_noise_failure_modes/: index.html
ocr_repetition_policy/: index.html
output/: alpha.md
pipeline/: IMPORTS_csv_to_txt.py  LICENSE.md  MANIFEST.in  README.md  README_package.md  SVM_predict_w_threshold.py  TODO.md  csv_datasets_from_parquet.py  docling_library_test.py  extract_MDs_to_parquet.py  find_bad_extractions.py  fully_annotate_sections.py  index.html  pyproject.toml  refactoring_todo.md  setup.py
pipeline/examples/: README.md  process_markdown_repository.py
pipeline/scripts/: concurrent_downloader.py  create_annotation_samples.py  test_section_reconstruction.py
pipeline/src/: __init__.py
pipeline/src/glossapi/: __init__.py  corpus.py  gloss_downloader.py  gloss_extract.py  gloss_extract.py.new  gloss_section.py  gloss_section_classifier.py  parquet_schema.py  sample_for_training.py  section.py
pipeline/src/glossapi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pipeline/src/glossapi/models/: kmeans_weights.joblib  section_classifier.joblib
pipeline/v2/: LICENSE  pyproject.toml  svm_model.joblib
pipeline/v2/models/: kmeans_weights.joblib  section_classifier.joblib
pipeline/v2/src/glossapi/: __init__.py  academic_section.py  corpus.py  gloss_section_classifier.py  sampler.py
pipeline/v2/src/glossapi_academic/: __init__.py  corpus.py  gloss_academic_classifier.py  gloss_convert.py  gloss_extract.py  gloss_extraction.py  gloss_section.py  gloss_section_classifier.py
processed_output/: classified_sections.parquet  fully_annotated_sections.parquet
quickstart/: index.html
repro_rapidocr_onnx/: DECISIONS.md  ENVIRONMENT.md  KEYS.md  MODELS.md  PATCHES.md  README.md  RUN.md  TROUBLESHOOTING.md  greek_pdf_ocr.py  requirements.txt
rust/glossapi_rs_cleaner/: CHANGES_2026_04_22.md  CHANGES_2026_04_25.md  Cargo.toml  pyproject.toml
rust/glossapi_rs_cleaner/docs/: MD_MODULE_ARCHITECTURE.md  MD_MODULE_ARCHITECTURE_IMPLEMENTATION_REVIEW_2026-04-24.md  PHASE_A_PARSER_BACKED_IMPLEMENTATION_REVIEW_2026-04-24.md  PHASE_A_PARSER_BACKED_INDEX.md
rust/glossapi_rs_cleaner/src/: TODO.md  charset_module.rs  cleaning_module.rs  cmark_gfm_oracle.rs  directory_processor.rs  latex_module.rs  lib.rs  md_format.rs  md_format_surgical.rs  md_module.rs  md_verify.rs  normalize.rs  pipeline_module.rs  table_analysis_module.rs  table_remover_module.rs
rust/glossapi_rs_noise/: Cargo.toml  pyproject.toml
rust/glossapi_rs_noise/src/: lib.rs  noise_metrics.rs
samples/: openarchives_download_policy.yml
scraping/: CONTRIBUTING.md  CONTRIBUTION_SUMMARY.md  GITHUB_WORKFLOW.md  goarch_extract.ipynb  paragraphs_final.csv
scripts/: bench_ocr_stage_subset.py  bootstrap_openarchives_ocr_refresh_vm.sh  (+8 more)
(+466 files in other folders)
