[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glossapi"
version = "0.1.4"
description = "Academic document processing pipeline with Rust-powered markdown cleaning"
authors = [
    {name = "GlossAPI Team", email = "glossapi.team@eellak.gr"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core pipeline deps
    "pandas>=1.3.0",
    "numpy>=1.26,<3",
    "scikit-learn==1.6.1",
    "joblib>=1.0.0",
    "dask>=2022.1.0",
    "pyarrow>=7.0.0",
    "aiohttp>=3.8.0",
    "aiofiles>=23.0.0",
    "ftfy>=6.0.0",
    "tenacity>=8.0.0",
    "tqdm>=4.67.0",
    "pyyaml>=6.0",
    "google-genai>=1.30.0",
    # Math/JSON enrichment helpers
    "pypdfium2>=4.0.0",
    "zstandard>=0.22.0",
]
license = "EUPL-1.2"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[project.optional-dependencies]
# Browser automation fallback for browser-gated file endpoints
browser = [
    "playwright>=1.52,<2",
]
# Docling extraction/layout stack
docling = [
    "docling==2.81.0",
]
# Optional CUDA layout acceleration (Docling)
cuda = [
    "torch==2.5.1",
    "torchvision==0.20.1",
]
# DeepSeek OCR backend extras (Torch should be installed from the PyTorch index).
# vLLM is the supported runtime backend. transformers is pulled transitively by
# vllm; we no longer pin it here because the DeepSeek-OCR-2 bundled modeling
# code requires the pre-4.46 attention API and the only working path is via
# vllm's own model loader.
deepseek = [
    "vllm==0.18.0",
    "accelerate>=1.2.1,<2",
    "pymupdf==1.24.10",
    "Pillow==12.1.1",
    "img2pdf>=0.5.1",
    "einops",
    "easydict",
    "addict",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["glossapi", "glossapi.*"]

[tool.setuptools.package-data]
glossapi = ["models/**/*"]

[tool.pytest.ini_options]
markers = [
    "deepseek: exercises the DeepSeek OCR pipeline",
]
