[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glossapi"
version = "0.0.3.5.2"
description = "A library for processing academic texts in Greek and other languages"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "European Union Public Licence 1.2 (EUPL 1.2)"}
authors = [
    {name = "GlossAPI Team", email = "glossapi.team@eellak.gr"}
]
