[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glossapi"
version = "0.0.6"
description = "A library for processing academic texts in Greek and other languages"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "European Union Public Licence 1.2 (EUPL 1.2)"}
authors = [
    {name = "GlossAPI Team", email = "foivos@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "joblib",
    "dask",
    "pyarrow",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
glossapi = ["models/*.joblib"]

[project.urls]
Repository = "https://github.com/eellak/glossAPI"
