[project]
name = "glossapi-deepseek-runtime"
version = "0.1.0"
description = "UV-managed runtime for GlossAPI DeepSeek-OCR-2 execution"
requires-python = ">=3.11,<3.13"
dependencies = [
    "glossapi[deepseek]",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
]

[dependency-groups]
test = [
    "pytest",
    "fpdf2",
]

[tool.uv.sources]
glossapi = { path = "../..", editable = true }
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
