[project]
name = "glossapi-deepseek-runtime"
version = "0.1.0"
description = "UV-managed runtime for GlossAPI DeepSeek-OCR-2 execution"
requires-python = ">=3.11,<3.13"
dependencies = [
    "glossapi[deepseek]",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "torchaudio==2.9.1",
]

[dependency-groups]
test = [
    "pytest",
    "fpdf2",
]

[tool.uv.sources]
glossapi = { path = "../..", editable = true }
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
