[project]
name = "glossapi-deepseek-runtime"
version = "0.1.0"
description = "UV-managed runtime for GlossAPI DeepSeek-OCR-2 execution"
requires-python = ">=3.11,<3.13"
dependencies = [
    "glossapi[deepseek]",
    "nvidia-cuda-runtime-cu12==12.9.79",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "torchaudio==2.10.0",
]

[dependency-groups]
test = [
    "pytest",
    "fpdf2",
]

[tool.uv.sources]
glossapi = { path = "../..", editable = true }
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
