[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build.targets.wheel]
packages = ["src/glossapi_academic"]

[tool.hatch.build.targets.wheel.force-include]
'svm_model.joblib' = 'svm_model.joblib'

[tool.hatch.build]
include = [
  "src/glossapi_academic/*.py",
  "svm_model.joblib",
]

[project]
name = "glossapiacademic"
version = "0.0.3.2"
dependencies = ['docling','ftfy','scikit-learn','pandas','pyarrow','numpy','tqdm','matplotlib','dask']
authors = [
  { name="Glossapi Team", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
]
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
