[package]
name = "glossapi_rs_noise"
version = "0.1.0"
edition = "2021"
authors = ["GlossAPI Team <glossapi.team@eellak.gr>"]
description = "Noise-based markdown quality metrics for GlossAPI (PyO3 extension)"
license = "EUPL-1.2"

[lib]
name = "glossapi_rs_noise"
crate-type = ["cdylib"]

[dependencies]
rayon = "1.8.0"
walkdir = "2.4.0"
memmap2 = "0.9"
once_cell = "1.19.0"
lazy_static = "1.4.0"
csv = "1.3.0"
pyo3 = { version = "0.19.0", features = ["extension-module", "abi3-py38", "macros"] }
anyhow = "1"
