[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "glossapi_rs_noise"
version = "0.1.0"
requires-python = ">=3.8"
authors = [{name = "GlossAPI Team", email = "glossapi.team@eellak.gr"}]
license = {text = "EUPL-1.2"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
